--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,31 @@
     </dependency>
 
     <dependency>
+      <groupId>org.highmed.dsf</groupId>
+      <artifactId>dsf-fhir-webservice-client</artifactId>
+      <version>0.5.0-SNAPSHOT</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.highmed.dsf</groupId>
+      <artifactId>dsf-fhir-websocket-client</artifactId>
+      <version>0.5.0-SNAPSHOT</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.highmed.dsf</groupId>
+      <artifactId>dsf-fhir-rest-adapter</artifactId>
+      <version>0.5.0-SNAPSHOT</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>3.7.7</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <scope>test</scope>
