--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -43,3 +43,20 @@ cors:
   allowedOrigins:
     - "*"
 
+de:
+  num-codex:
+    FeasibilityGuiBackend:
+      dsf:
+        security:
+          certificate: ${DSF_SECURITY_CACERT}
+          keystore:
+            p12file: ${DSF_SECURITY_KEYSTORE_P12FILE}}
+            password: ${DSF_SECURITY_KEYSTORE_PASSWORD}
+        webservice:
+          baseUrl: ${DSF_WEBSERVICE_BASE_URL}
+          readTimeout: 20000
+          connectTimeout: 2000
+        websocket:
+          url: ${DSF_WEBSOCKET_URL}
+        organizationId: ${DSF_ORGANIZATION_ID}
+
