--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
   <description>Backend of the Feasibility GUI</description>
   <properties>
     <java.version>15</java.version>
+    <maven.compiler.source>15</maven.compiler.source>
+    <maven.compiler.target>15</maven.compiler.target>
   </properties>
   <dependencies>
     <dependency>
@@ -41,6 +43,14 @@
       <artifactId>springdoc-openapi-ui</artifactId>
       <version>1.5.3</version>
     </dependency>
+
+
+    <dependency>
+      <groupId>org.aktin</groupId>
+      <artifactId>broker-client</artifactId>
+      <version>1.1</version>
+    </dependency>
+    
 
     <dependency>
       <groupId>org.highmed.dsf</groupId>
