--- a/src/main/resources/application-deploy.yml
+++ b/src/main/resources/application-deploy.yml
@@ -22,6 +22,10 @@ userstore:
 de:
   num-codex:
     FeasibilityGuiBackend:
+      aktin:
+        broker:
+          baseUrl: ${AKTIN_BROKER_BASE_URL}
+          apiKey: ${AKTIN_BROKER_API_KEY}
       dsf:
         security:
           certificate: ${DSF_SECURITY_CACERT}
