Implement QueryHandler (REST and Service) as well BrokerClient for mocking

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,6 +17,29 @@ spring:
         provider:
           userStoreClient:
             token-uri: ${keycloak.url}/auth/realms/Num/protocol/openid-connect/token
+  datasource:
+    url: jdbc:postgresql://localhost:5555/codex_ui?currentSchema=codex
+    username: postgres
+    password: password
+    driverClassName: org.postgresql.Driver
+
+  jpa:
+    database: POSTGRESQL
+    show-sql: true
+    hibernate:
+      ddl-auto: create-drop
+    properties:
+      hibernate:
+        dialect=com:
+          jackis:
+            jsonintegration:
+              hibernate: CustomPostgreSQL95Dialect
+
+
+app:
+  # AKTIN or DSF or MOCK
+  broker-client: MOCK
+
 
 backend:
   ontology-folder: ontology/ui_profiles
