--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://feasibility-db:5432/codex_ui?currentSchema=codex
       - SPRING_DATASOURCE_USERNAME=codex-postgres
       - SPRING_DATASOURCE_PASSWORD=codex-password
+      - BROKER_CLIENT_TYPE=MOCK
 
   feasibility-db:
     image: 'postgres:13.1-alpine'
