--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     depends_on:
       - feasibility-db
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://feasibility-db:5432/codex_ui?currentSchema=codex
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://feasibility-db:5555/codex_ui?currentSchema=codex
       - SPRING_DATASOURCE_USERNAME=codex-postgres
       - SPRING_DATASOURCE_PASSWORD=codex-password
       - BROKER_CLIENT_TYPE=MOCK
@@ -16,6 +16,8 @@ services:
   feasibility-db:
     image: 'postgres:13.1-alpine'
     container_name: feasibility-db
+    ports:
+    - 5555:5432
     environment:
       - POSTGRES_USER=codex-postgres
       - POSTGRES_PASSWORD=codex-password
