--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,12 @@
     </dependency>
 
     <dependency>
+      <groupId>de.numcodex</groupId>
+      <artifactId>sq2cql</artifactId>
+      <version>0.0.1-SNAPSHOT</version>
+    </dependency>
+
+    <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
       <version>3.7.7</version>
