--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -37,7 +37,7 @@ spring:
 
 
 app:
-  # AKTIN or DSF or MOCK
+  # AKTIN or DSF or MOCK or DIRECT
   brokerClient: ${BROKER_CLIENT_TYPE:MOCK}
   mappingsFile: ${MAPPINGS_FILE}
   conceptTreeFile: ${CONCEPT_TREE_FILE}
