--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,13 @@
   <name>FeasibilityGuiBackend</name>
   <description>Backend of the Feasibility GUI</description>
 
+  <scm>
+    <connection>scm:git:${project.scm.url}</connection>
+    <developerConnection>scm:git:${project.scm.url}</developerConnection>
+    <url>https://github.com/num-codex/codex-feasibility-backend.git</url>
+    <tag>HEAD</tag>
+  </scm>
+
   <properties>
     <java.version>15</java.version>
   </properties>
@@ -140,6 +147,16 @@
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
+      </plugin>
+
+      <plugin>
+        <artifactId>maven-release-plugin</artifactId>
+        <version>3.0.0-M1</version>
+        <configuration>
+          <scmCommentPrefix>[ci-skip]</scmCommentPrefix>
+          <scmReleaseCommitComment>[release] prepare release @{releaseLabel}</scmReleaseCommitComment>
+          <tagNameFormat>v@{project.version}</tagNameFormat>
+        </configuration>
       </plugin>
     </plugins>
   </build>
