--- a/pom.xml
+++ b/pom.xml
@@ -14,9 +14,11 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>FeasibilityGuiBackend</name>
   <description>Backend of the Feasibility GUI</description>
+
   <properties>
     <java.version>15</java.version>
   </properties>
+
   <dependencies>
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -32,10 +34,12 @@
       <artifactId>commons-lang3</artifactId>
       <version>3.12.0</version>
     </dependency>
+
     <dependency>
       <groupId>org.flywaydb</groupId>
       <artifactId>flyway-core</artifactId>
     </dependency>
+
     <dependency>
       <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
@@ -61,13 +65,11 @@
       <version>1.5.3</version>
     </dependency>
 
-
     <dependency>
       <groupId>org.aktin</groupId>
       <artifactId>broker-client</artifactId>
       <version>1.1</version>
     </dependency>
-    
 
     <dependency>
       <groupId>org.highmed.dsf</groupId>
@@ -90,7 +92,7 @@
     <dependency>
       <groupId>de.numcodex</groupId>
       <artifactId>sq2cql</artifactId>
-      <version>0.0.1-SNAPSHOT</version>
+      <version>0.1.0</version>
     </dependency>
 
     <dependency>
@@ -107,6 +109,31 @@
     </dependency>
 
   </dependencies>
+
+  <repositories>
+    <repository>
+      <id>highmed-dsf</id>
+      <name>GitHub HiGHmed Apache Maven Packages</name>
+      <url>https://maven.pkg.github.com/highmed/highmed-dsf</url>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
+    <repository>
+      <id>de.numcodex</id>
+      <name>GitHub NUM CODEX Apache Maven Packages</name>
+      <url>https://maven.pkg.github.com/num-codex/*</url>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
+  </repositories>
 
   <build>
     <plugins>
