--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,13 +10,34 @@ services:
     environment:
       SPRING_DATASOURCE_URL: ${CODEX_FEASIBILITY_BACKEND_DATASOURCE_URL:-jdbc:postgresql://feasibility-db:5432/codex_ui?currentSchema=codex}
       SPRING_DATASOURCE_USERNAME: ${CODEX_FEASIBILITY_BACKEND_DATASOURCE_USERNAME:-codex-postgres}
-      SPRING_DATASOURCE_PASSWORD: ${CODEX_FEASIBILITY_BACKEND_DATASOURCE_PASSWORD:-codex-password} 
+      SPRING_DATASOURCE_PASSWORD: ${CODEX_FEASIBILITY_BACKEND_DATASOURCE_PASSWORD:-codex-password}
       BROKER_CLIENT_TYPE: ${BROKER_CLIENT_TYPE:-MOCK}
-      FLARE_WEBSERVICE_BASE_URL: ${FLARE_WEBSERVICE_BASE_URL:-http://flare:5000}
+      KEYCLOAK_ENABLED: ${CODEX_FEASIBILITY_BACKEND_KEYCLOAK_ENABLED:-true}
+      KEYCLOAK_BASE_URL: ${CODEX_FEASIBILITY_BACKEND_KEYCLOAK_BASE_URL:-http://keycloak:8080}
+      KEYCLOAK_REALM: ${CODEX_FEASIBILITY_BACKEND_KEYCLOAK_REALM:-codex-develop}
+      KEYCLOAK_CLIENT_ID: ${CODEX_FEASIBILITY_BACKEND_KEYCLOAK_CLIENT_ID:-feasibility-gui}
+      KEYCLOAK_ALLOWED_ROLE: ${CODEX_FEASIBILITY_BACKEND_KEYCLOAK_ALLOWED_ROLE:-CODEX_USER}
+      ONTOLOGY_FILES_FOLDER_UI: ${CODEX_FEASIBILITY_BACKEND_ONTOLOGY_FILES_FOLDER:-/opt/codex-feasibility-backend/ontology}
+      MAPPINGS_FILE: ${CODEX_FEASIBILITY_BACKEND_ONTOLOGY_FILES_FOLDER:-/opt/codex-feasibility-backend/ontology}/termCodeMapping.json
+      CONCEPT_TREE_FILE: ${CODEX_FEASIBILITY_BACKEND_ONTOLOGY_FILES_FOLDER:-/opt/codex-feasibility-backend/ontology}/conceptTree.json
+      CQL_TRANSLATE_ENABLED: ${CODEX_FEASIBILITY_BACKEND_CQL_TRANSLATE_ENABLED:-true}
+      FHIR_TRANSLATE_ENABLED: ${CODEX_FEASIBILITY_BACKEND_FHIR_TRANSLATE_ENABLED:-false}
+      FLARE_WEBSERVICE_BASE_URL: ${CODEX_FEASIBILITY_BACKEND_FLARE_WEBSERVICE_BASE_URL:-http://flare:5000}
+      API_BASE_URL: ${CODEX_FEASIBILITY_BACKEND_API_BASE_URL:-}
+      # ---- Aktin
+      AKTIN_BROKER_BASE_URL: ${CODEX_FEASIBILITY_BACKEND_AKTIN_BROKER_BASE_URL:-http://aktin:8080/broker}
+      AKTIN_BROKER_API_KEY: ${CODEX_FEASIBILITY_BACKEND_AKTIN_BROKER_API_KEY:-abc123}
+      # ---- DSF
+      DSF_SECURITY_CACERT: /opt/codex-feasibility-backend/dsf-security/${CODEX_FEASIBILITY_BACKEND_DSF_SECURITY_CACERT}
+      DSF_SECURITY_KEYSTORE_P12FILE: /opt/codex-feasibility-backend/dsf-security/${CODEX_FEASIBILITY_BACKEND_DSF_SECURITY_KEYSTORE_P12FILE}
+      DSF_SECURITY_KEYSTORE_PASSWORD: ${CODEX_FEASIBILITY_BACKEND_DSF_SECURITY_KEYSTORE_PASSWORD}
+      DSF_WEBSERVICE_BASE_URL: ${CODEX_FEASIBILITY_BACKEND_DSF_WEBSERVICE_BASE_URL:-https://dsf:8080/fhir}
+      DSF_WEBSOCKET_URL: ${CODEX_FEASIBILITY_BACKEND_DSF_WEBSOCKET_URL:-wws://dsf:8080/fhir/ws}
+      DSF_ORGANIZATION_ID: ${CODEX_FEASIBILITY_BACKEND_DSF_ORGANIZATION_ID}
     volumes:
-      - ${CODEX_CONCEPT_TREE_PATH:-./ontology/conceptTree.json}:/opt/codex-feasibility-backend/ontology/conceptTree.json
-      - ${CODEX_TERM_CODE_MAPPING_PATH:-./ontology/termCodeMapping.json}:/opt/codex-feasibility-backend/ontology/termCodeMapping.json
-
+      - ${CODEX_CONCEPT_TREE_PATH:-./ontology/conceptTree.json}:${CODEX_FEASIBILITY_BACKEND_ONTOLOGY_FILES_FOLDER:-/opt/codex-feasibility-backend/ontology}/conceptTree.json
+      - ${CODEX_TERM_CODE_MAPPING_PATH:-./ontology/termCodeMapping.json}:${CODEX_FEASIBILITY_BACKEND_ONTOLOGY_FILES_FOLDER:-/opt/codex-feasibility-backend/ontology}/termCodeMapping.json
+      - ${CODEX_FEASIBILITY_BACKEND_DSF_SECURITY_DIR:-/dev/null}:/opt/codex-feasibility-backend/dsf-security/
   feasibility-db:
     image: 'postgres:13.1-alpine'
     container_name: feasibility-db
