--- a/pom.xml
+++ b/pom.xml
@@ -9,21 +9,33 @@
   </parent>
   <groupId>de.num-codex</groupId>
   <artifactId>FeasibilityGuiBackend</artifactId>
-  <version>0.0.4-SNAPSHOT</version>
+  <version>0.0.5</version>
   <name>FeasibilityGuiBackend</name>
   <description>Backend of the Feasibility GUI</description>
 
-      
+
   <scm>
     <connection>scm:git:${project.scm.url}</connection>
     <developerConnection>scm:git:${project.scm.url}</developerConnection>
     <url>https://github.com/num-codex/codex-feasibility-backend.git</url>
-    <tag>v0.0.3</tag>
+    <tag>v0.0.5</tag>
   </scm>
 
   <properties>
     <java.version>15</java.version>
   </properties>
+
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.keycloak.bom</groupId>
+        <artifactId>keycloak-adapter-bom</artifactId>
+        <version>12.0.4</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
 
   <dependencies>
     <dependency>
@@ -46,14 +58,6 @@
       <groupId>org.keycloak</groupId>
       <artifactId>keycloak-spring-boot-starter</artifactId>
       <version>12.0.4</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.keycloak.bom</groupId>
-      <artifactId>keycloak-adapter-bom</artifactId>
-      <version>12.0.4</version>
-      <type>pom</type>
-      <scope>import</scope>
     </dependency>
 
     <dependency>
