Add Proxy Settings to DSF

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -40,6 +40,10 @@ app:
       keystore:
         p12file: ${DSF_SECURITY_KEYSTORE_P12FILE}
         password: ${DSF_SECURITY_KEYSTORE_PASSWORD}
+    proxy:
+      host: ${DSF_PROXY_HOST:}
+      username: ${DSF_PROXY_USERNAME:}
+      passowrd: ${DSF_PROXY_PASSWORD:}
     webservice:
       baseUrl: ${DSF_WEBSERVICE_BASE_URL}
       readTimeout: 20000
@@ -76,6 +80,6 @@ logging:
 
 cors:
   allowedOrigins:
-    - "*"
+  - "*"
 
 
