--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,10 @@ services:
       SPRING_DATASOURCE_URL: ${CODEX_FEASIBILITY_BACKEND_DATASOURCE_URL:-jdbc:postgresql://feasibility-db:5432/codex_ui?currentSchema=codex}
       SPRING_DATASOURCE_USERNAME: ${CODEX_FEASIBILITY_BACKEND_DATASOURCE_USERNAME:-codex-postgres}
       SPRING_DATASOURCE_PASSWORD: ${CODEX_FEASIBILITY_BACKEND_DATASOURCE_PASSWORD:-codex-password}
-      BROKER_CLIENT_TYPE: ${CODEX_FEASIBILITY_BACKEND_BROKER_CLIENT_TYPE:-MOCK}
+      BROKER_CLIENT_MOCK_ENABLED: ${CODEX_FEASIBILITY_BACKEND_BROKER_CLIENT_MOCK_ENABLED:-true}
+      BROKER_CLIENT_DIRECT_ENABLED: ${CODEX_FEASIBILITY_BACKEND_BROKER_CLIENT_DIRECT_ENABLED:-false}
+      BROKER_CLIENT_AKTIN_ENABLED: ${CODEX_FEASIBILITY_BACKEND_BROKER_CLIENT_AKTIN_ENABLED:-false}
+      BROKER_CLIENT_DSF_ENABLED: ${CODEX_FEASIBILITY_BACKEND_BROKER_CLIENT_DSF_ENABLED:-false}
       KEYCLOAK_ENABLED: ${CODEX_FEASIBILITY_BACKEND_KEYCLOAK_ENABLED:-true}
       KEYCLOAK_BASE_URL: ${CODEX_FEASIBILITY_BACKEND_KEYCLOAK_BASE_URL:-http://keycloak:8080}
       KEYCLOAK_REALM: ${CODEX_FEASIBILITY_BACKEND_KEYCLOAK_REALM:-codex-develop}
