--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -47,9 +47,9 @@ app:
           p12file: ${DSF_SECURITY_KEYSTORE_P12FILE}
           password: ${DSF_SECURITY_KEYSTORE_PASSWORD}
       proxy:
-        host: ${DSF_PROXY_HOST}
-        username: ${DSF_PROXY_USERNAME}
-        password: ${DSF_PROXY_PASSWORD}
+        host: ${DSF_PROXY_HOST:}
+        username: ${DSF_PROXY_USERNAME:}
+        password: ${DSF_PROXY_PASSWORD:}
       webservice:
         baseUrl: ${DSF_WEBSERVICE_BASE_URL}
         readTimeout: 20000
