set log4j to version 2.16 for spring boot

--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
     <java.version>15</java.version>
     <mockwebserver.version>4.9.1</mockwebserver.version>
     <okhttp3.version>4.9.1</okhttp3.version>
+    <log4j2.version>2.16.0</log4j2.version>
   </properties>
 
   <dependencyManagement>
