--- a/pom.xml
+++ b/pom.xml
@@ -214,6 +214,14 @@
 
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <skipTests>${skipUnitTests}</skipTests>
+        </configuration>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-failsafe-plugin</artifactId>
         <version>3.0.0-M5</version>
         <executions>
@@ -224,6 +232,9 @@
             </goals>
           </execution>
         </executions>
+        <configuration>
+          <skipITs>${skipIntegrationTests}</skipITs>
+        </configuration>
       </plugin>
     </plugins>
   </build>
