--- a/pom.xml
+++ b/pom.xml
@@ -167,6 +167,13 @@
       <scope>test</scope>
     </dependency>
 
+    <dependency>
+      <groupId>org.testcontainers</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>1.16.2</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
   <repositories>
