Allow for Log Level Adjustments
Allows to adjust the application's log level with
the default value being set to 'warn'.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       SPRING_DATASOURCE_URL: ${CODEX_FEASIBILITY_BACKEND_DATASOURCE_URL:-jdbc:postgresql://feasibility-db:5432/codex_ui?currentSchema=codex}
       SPRING_DATASOURCE_USERNAME: ${CODEX_FEASIBILITY_BACKEND_DATASOURCE_USERNAME:-codex-postgres}
       SPRING_DATASOURCE_PASSWORD: ${CODEX_FEASIBILITY_BACKEND_DATASOURCE_PASSWORD:-codex-password}
+      LOG_LEVEL: ${CODEX_FEASIBILITY_BACKEND_LOG_LEVEL:-warn}
       BROKER_CLIENT_MOCK_ENABLED: ${CODEX_FEASIBILITY_BACKEND_BROKER_CLIENT_MOCK_ENABLED:-true}
       BROKER_CLIENT_DIRECT_ENABLED: ${CODEX_FEASIBILITY_BACKEND_BROKER_CLIENT_DIRECT_ENABLED:-false}
       BROKER_CLIENT_AKTIN_ENABLED: ${CODEX_FEASIBILITY_BACKEND_BROKER_CLIENT_AKTIN_ENABLED:-false}
