--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -81,8 +81,8 @@ keycloak:
 
 logging:
   level:
-    de.numcodex: trace
-    org.springframework.web: trace
+    de.numcodex: ${LOG_LEVEL:warn}
+    org.springframework.web: ${LOG_LEVEL:warn}
 
 cors:
   allowedOrigins:
