--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,10 @@
       <artifactId>broker-client</artifactId>
       <version>1.3.2</version>
     </dependency>
+    <dependency>
+      <groupId>javax.xml.bind</groupId>
+      <artifactId>jaxb-api</artifactId>
+    </dependency>
 
     <dependency>
       <groupId>org.highmed.dsf</groupId>
