#102 - Validate query from frontend against json schema
- add first version of json validation with pre packaged schema file
- change http responses in run-query endpoint since it always returned 200

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,6 +29,7 @@ app:
   fhirTranslationEnabled: ${FHIR_TRANSLATE_ENABLED:false}
   cqlTranslationEnabled: ${CQL_TRANSLATE_ENABLED:true}
   apiBaseUrl: ${API_BASE_URL:}
+  enableQueryValidation: ${QUERY_VALIDATION_ENABLED:true}
   broker:
     mock:
       enabled: ${BROKER_CLIENT_MOCK_ENABLED:false}
