--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,12 @@
     </dependency>
 
     <dependency>
+      <artifactId>org.everit.json.schema</artifactId>
+      <groupId>org.everit.json</groupId>
+      <version>1.5.1</version>
+    </dependency>
+
+    <dependency>
       <groupId>org.aktin</groupId>
       <artifactId>broker-client</artifactId>
       <version>1.3.2</version>
