First working version with GET ui_profiles Endpoint and database migration for ui_profiles

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,6 +25,9 @@ management:
   endpoint:
     health:
       enabled: true
+  flyway:
+    ignore-missing-migrations: true
+
 
 app:
   # AKTIN or DSF or MOCK or DIRECT
