First working version with GET ui_profiles Endpoint and database migration for ui_profiles

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,6 +19,8 @@ spring:
           jackis:
             jsonintegration:
               hibernate: CustomPostgreSQL95Dialect
+  flyway:
+    ignore-missing-migrations: true
 
 
 app:
