add location header to exposed headers

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -91,7 +91,6 @@ logging:
     org.springframework.web: ${LOG_LEVEL:warn}
 
 cors:
-  allowedOrigins:
-  - "*"
+  allowedOrigins: ${ALLOWED_ORIGINS:http://localhost}
 
 
