--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.6.3</version>
+    <version>2.6.7</version>
     <relativePath /> <!-- lookup parent from repository -->
   </parent>
   <groupId>de.medizininformatik-initiative</groupId>
@@ -23,7 +23,7 @@
 
   <properties>
     <java.version>17</java.version>
-    <mockwebserver.version>4.9.1</mockwebserver.version>
+    <mockwebserver.version>4.9.3</mockwebserver.version>
     <okhttp3.version>4.9.1</okhttp3.version>
     <log4j2.version>2.16.0</log4j2.version>
   </properties>
@@ -33,9 +33,14 @@
       <dependency>
         <groupId>org.keycloak.bom</groupId>
         <artifactId>keycloak-adapter-bom</artifactId>
-        <version>12.0.4</version>
+        <version>18.0.0</version>
         <type>pom</type>
         <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.bouncycastle</groupId>
+        <artifactId>bcpkix-jdk15on</artifactId>
+        <version>1.70</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
@@ -60,7 +65,7 @@
     <dependency>
       <groupId>org.keycloak</groupId>
       <artifactId>keycloak-spring-boot-starter</artifactId>
-      <version>12.0.4</version>
+      <version>18.0.0</version>
     </dependency>
 
     <dependency>
@@ -93,14 +98,14 @@
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
-      <version>1.18.22</version>
+      <version>1.18.24</version>
       <scope>provided</scope>
     </dependency>
 
     <dependency>
       <groupId>org.springdoc</groupId>
       <artifactId>springdoc-openapi-ui</artifactId>
-      <version>1.5.3</version>
+      <version>1.6.8</version>
     </dependency>
 
     <dependency>
@@ -156,21 +161,21 @@
     <dependency>
       <groupId>org.testcontainers</groupId>
       <artifactId>testcontainers</artifactId>
-      <version>1.16.2</version>
+      <version>1.17.1</version>
       <scope>test</scope>
     </dependency>
 
     <dependency>
       <groupId>org.testcontainers</groupId>
       <artifactId>junit-jupiter</artifactId>
-      <version>1.16.2</version>
+      <version>1.17.1</version>
       <scope>test</scope>
     </dependency>
 
     <dependency>
       <groupId>org.testcontainers</groupId>
       <artifactId>postgresql</artifactId>
-      <version>1.16.2</version>
+      <version>1.17.1</version>
       <scope>test</scope>
     </dependency>
 
