--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,11 @@
       <artifactId>keycloak-spring-boot-starter</artifactId>
       <version>18.0.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-security</artifactId>
+      <version>2.7.2</version>
+    </dependency>
 
     <dependency>
       <groupId>org.springframework.boot</groupId>
