--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -37,9 +37,8 @@ app:
   cqlTranslationEnabled: ${CQL_TRANSLATE_ENABLED:true}
   apiBaseUrl: ${API_BASE_URL:}
   enableQueryValidation: ${QUERY_VALIDATION_ENABLED:true}
-  # Client ID of the external application that may read all queries
-  fdpgClientId: ${FDPG_CLIENT_ID}
-  keycloakAllowedRole: ${KEYCLOAK_ALLOWED_ROLE:CODEX_USER}
+  keycloakAllowedRole: ${KEYCLOAK_ALLOWED_ROLE:FEASIBILITY_USER}
+  keycloakAdminRole: ${KEYCLOAK_ADMIN_ROLE:FEASIBILITY_ADMIN}
   broker:
     mock:
       enabled: ${BROKER_CLIENT_MOCK_ENABLED:false}
