#19 - Change stored query handling
- delive the "custom" swagger api with the application itself instead of showing the autogenerated one under /swagger-ui.html

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,6 +19,10 @@ spring:
           jackis:
             jsonintegration:
               hibernate: CustomPostgreSQL95Dialect
+
+springdoc:
+  swagger-ui:
+    url: /swagger.yaml
 management:
   endpoints:
     enabled-by-default: false
