#20 - Restrict number of queries per minute(s)
- Add configurable values for amount of queries a user may post during a certain time interval (default 3 queries / minute)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -73,7 +73,10 @@ app:
     baseUrl: ${FLARE_WEBSERVICE_BASE_URL:http://localhost:5000}
     readTimeout: 20000
     connectTimeout: 2000
-
+  security:
+    nqueries:
+      amount: ${SECURITY_NQUERIES_AMOUNT:3}
+      perminutes: ${SECURITY_NQUERIES_PERMINUTES:1}
 
 keycloak:
   cors: true
