--- a/pom.xml
+++ b/pom.xml
@@ -200,6 +200,13 @@
       <scope>test</scope>
     </dependency>
 
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-test</artifactId>
+      <version>5.7.2</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
   <repositories>
