--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,7 @@
     <dependency>
       <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
+      <version>42.4.1</version>
       <scope>runtime</scope>
     </dependency>
 
