Asynchronously Dispatch Queries via Brokers
Allows for asynchronous dispatches while maintaining
transaction propagation. Since data repositories (DB)
are involved and said transaction propagation is a
requirement, this will only run on a single thread.
Trying to dispatch via multiple brokers in parallel
breaks the propagation since transaction information
is stored in thread local variables. Thus, don't opt
for parallel execution and let Spring handle it.

Going for an asynchronous dispatch approach allows
individual brokers to fail without affecting others.
An error is only ever returned if all brokers fail
to publish a query. Otherwise, partial results can
still be requested by the UI (or any other client).

--- a/pom.xml
+++ b/pom.xml
@@ -208,6 +208,13 @@
       <scope>test</scope>
     </dependency>
 
+    <dependency>
+      <groupId>io.projectreactor</groupId>
+      <artifactId>reactor-test</artifactId>
+      <version>3.4.22</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
   <repositories>
