Revert "remove snakeyaml"
This reverts commit 5bd837f9c0759d80b08dcb345722d0b5d1442de7.

--- a/pom.xml
+++ b/pom.xml
@@ -209,6 +209,14 @@
       <scope>test</scope>
     </dependency>
 
+    <!-- This dependency is only added to address a vulnerability in  org.springframework.boot-->
+    <!-- Remove this once the vulnerability is adressed in the next version -->
+    <dependency>
+      <groupId>org.yaml</groupId>
+      <artifactId>snakeyaml</artifactId>
+      <version>1.32</version>
+    </dependency>
+
     <dependency>
       <groupId>io.projectreactor</groupId>
       <artifactId>reactor-test</artifactId>
